Made an interactive quest information gui. The player can now view a quest's description and cancel a quest.